syntax = "proto3";

package admin.freelancers.city.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/admin/freelancers/city/v1";

// -------------- Сервис по работе с городами докторов ---------------
service FreelancerAdminCityService {
  rpc GetCities(GetCitiesRequest) returns (GetCitiesResponse) {
    option (google.api.http) = {get: "/api/v1/admin/freelancers/cities"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение городов фрилансеров"};
  }
  rpc SearchCities(SearchCitiesRequest) returns (SearchCitiesResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancers/cities/search"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Поиск города по названию"};
  }
  rpc CreateCity(CreateCityRequest) returns (CreateCityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancers/cities/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Создание нового города"};
  }
}

message GetCitiesRequest {}

message GetCitiesResponse {
  repeated CityItem cities = 1;

  message CityItem {
    int64 id = 1;
    string name = 2;
  }
}

message SearchCitiesRequest {
  string query = 1;
}

message SearchCitiesResponse {
  repeated CityItem cities = 1;

  message CityItem {
    int64 id = 1;
    string name = 2;
  }
}

message CreateCityRequest {
  string name = 1;
}

message CreateCityResponse {
  int64 id = 1;
}
